--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -54,6 +54,18 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.jboss.arquillian.core</groupId>
+        <artifactId>arquillian-core-api</artifactId>
+        <version>1.1.13.Final</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+         <groupId>org.jboss.arquillian.testng</groupId>
+         <artifactId>arquillian-testng-container</artifactId>
+         <version>1.1.13.Final</version>
+         <scope>test</scope>
+    </dependency>
+    <dependency>
        <groupId>org.jboss.arquillian.container</groupId>
        <artifactId>arquillian-tomcat-embedded-8</artifactId>
        <version>1.0.1.Final</version>
