--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -56,13 +56,13 @@
     <dependency>
         <groupId>org.jboss.arquillian.core</groupId>
         <artifactId>arquillian-core-api</artifactId>
-        <version>1.1.13.Final</version>
+        <version>${version.org.jboss.arquillian}</version>
         <scope>test</scope>
     </dependency>
     <dependency>
          <groupId>org.jboss.arquillian.testng</groupId>
          <artifactId>arquillian-testng-container</artifactId>
-         <version>1.1.13.Final</version>
+         <version>${version.org.jboss.arquillian}</version>
          <scope>test</scope>
     </dependency>
     <dependency>
