--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
     <version.eclipse.microprofile.health>1.0</version.eclipse.microprofile.health>
     <version.javax.javaee-api>7.0</version.javax.javaee-api>
     <version.javax.enterprise.cdi-api>1.2</version.javax.enterprise.cdi-api>
-    <version.javax.annotation-api>1.2</version.javax.annotation-api>
     <version.junit>4.11</version.junit>
-    <version.org.jboss.arquillian>1.4.0.Final</version.org.jboss.arquillian>
+    <version.org.jboss.arquillian>1.3.0.Final</version.org.jboss.arquillian>
     <version.org.jboss.logging>2.0.1.Final</version.org.jboss.logging>
+    <version.maven-compiler-plugin>3.7.0</version.maven-compiler-plugin>
   </properties>
 
   <scm>
@@ -79,12 +79,7 @@
         <artifactId>cdi-api</artifactId>
         <version>${version.javax.enterprise.cdi-api}</version>
       </dependency>
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>javax.annotation-api</artifactId>
-        <version>${version.javax.annotation-api}</version>
-      </dependency>
-
+      
       <dependency>
          <groupId>org.jboss.arquillian</groupId>
          <artifactId>arquillian-bom</artifactId>
@@ -124,7 +119,22 @@
             </attributes>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${version.maven-compiler-plugin}</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 </project>
