--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -48,7 +48,12 @@
       <artifactId>javax.json</artifactId>
       <version>1.1.2</version>
     </dependency>
-
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+        <version>4.11</version>
+    </dependency>
   </dependencies>
 
 </project>
