--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -49,6 +49,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.microprofile.health</groupId>
       <artifactId>microprofile-health-tck</artifactId>
       <scope>test</scope>
@@ -72,7 +77,12 @@
          <version>${version.org.jboss.arquillian}</version>
          <scope>test</scope>
     </dependency>
-    
+    <dependency>
+      <groupId>org.jboss.arquillian.container</groupId>
+      <artifactId>arquillian-weld-embedded</artifactId>
+      <version>2.0.0.Beta5</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
        <groupId>org.jboss.weld.servlet</groupId>
        <artifactId>weld-servlet-shaded</artifactId>
