--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,13 @@
     <version.javax.javaee-api>7.0</version.javax.javaee-api>
     <version.javax.enterprise.cdi-api>2.0</version.javax.enterprise.cdi-api>
     <version.junit>4.11</version.junit>
-    <version.org.jboss.arquillian>1.3.0.Final</version.org.jboss.arquillian>
+    <version.org.jboss.arquillian>1.4.0.Final</version.org.jboss.arquillian>
     <version.org.jboss.logging>2.0.1.Final</version.org.jboss.logging>
     <version.maven-compiler-plugin>3.7.0</version.maven-compiler-plugin>
+    <version.weld>2.4.7.Final</version.weld>
+    <version.arquillian.wildfly>2.1.0.Final</version.arquillian.wildfly>
+    <version.wildfly>13.0.0.Final</version.wildfly>
+    <version.jboss.servlet>1.0.0.Final</version.jboss.servlet> 
   </properties>
 
   <scm>
@@ -86,6 +90,26 @@
          <version>${version.org.jboss.arquillian}</version>
          <scope>import</scope>
          <type>pom</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.wildfly.arquillian</groupId>
+        <artifactId>wildfly-arquillian-container-managed</artifactId>
+        <version>${version.arquillian.wildfly}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.weld.servlet</groupId>
+        <artifactId>weld-servlet-core</artifactId>
+        <version>${version.weld}</version>
+        <scope>test</scope>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.jboss.spec.javax.servlet</groupId>
+        <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+        <version>${version.jboss.servlet}</version>
       </dependency>
 
       <!-- Dependencies provided by the project -->
