--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -37,16 +37,17 @@
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-      <version>1.0.0.Final</version> 
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>javax.json</artifactId>
-      <version>1.1.2</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>junit</groupId>
