--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <version.arquillian.wildfly>2.1.0.Final</version.arquillian.wildfly>
     <version.wildfly>13.0.0.Final</version.wildfly>
     <version.jboss.servlet>1.0.0.Final</version.jboss.servlet> 
+    <version.javax-json>1.1.2</version.javax-json>
   </properties>
 
   <scm>
@@ -78,6 +79,18 @@
         <version>${version.eclipse.microprofile.health}</version>
       </dependency>
       
+      <dependency>
+         <groupId>org.glassfish</groupId>
+         <artifactId>javax.json</artifactId>
+         <version>${version.javax-json}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.spec.javax.servlet</groupId>
+         <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+         <version>${version.jboss.servlet}</version>
+      </dependency>
+
       <!-- Other dependencies -->
       <dependency>
         <groupId>javax.enterprise</groupId>
