--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
   <properties>
     <version.asciidoctor.plugin>1.5.6</version.asciidoctor.plugin>
+    <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>1.0</version.eclipse.microprofile.health>
     <version.javax.javaee-api>7.0</version.javax.javaee-api>
     <version.javax.enterprise.cdi-api>2.0</version.javax.enterprise.cdi-api>
@@ -77,6 +78,12 @@
         <groupId>org.eclipse.microprofile.health</groupId>
         <artifactId>microprofile-health-tck</artifactId>
         <version>${version.eclipse.microprofile.health}</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.eclipse.microprofile.config</groupId>
+        <artifactId>microprofile-config-api</artifactId>
+        <version>${version.eclipse.microprofile.config}</version>
       </dependency>
       
       <dependency>
