--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -55,6 +55,12 @@
         <scope>test</scope>
         <version>4.11</version>
     </dependency>
+    <dependency>
+    	<groupId>org.hamcrest</groupId>
+    	<artifactId>hamcrest-library</artifactId>
+    	<scope>test</scope>
+    	<version>1.3</version>
+    </dependency>
   </dependencies>
 
 </project>
