--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -31,6 +31,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.eclipse.microprofile.config</groupId>
+      <artifactId>microprofile-config-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.microprofile.health</groupId>
       <artifactId>microprofile-health-api</artifactId>
     </dependency>
@@ -49,6 +54,12 @@
         <artifactId>junit</artifactId>
         <scope>test</scope>
         <version>4.11</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hamcrest</groupId>
+    	<artifactId>hamcrest-library</artifactId>
+    	<scope>test</scope>
+    	<version>1.3</version>
     </dependency>
   </dependencies>
 
