--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,9 @@
     <version.weld>2.4.7.Final</version.weld>
     <version.arquillian.wildfly>2.1.0.Final</version.arquillian.wildfly>
     <version.wildfly>13.0.0.Final</version.wildfly>
-    <version.jboss.servlet>1.0.0.Final</version.jboss.servlet> 
+    <version.jboss.servlet>1.0.0.Final</version.jboss.servlet>
     <version.javax-json>1.1.2</version.javax-json>
+    <version.smallrye-config>1.3.3</version.smallrye-config>
   </properties>
 
   <scm>
@@ -79,23 +80,23 @@
         <artifactId>microprofile-health-tck</artifactId>
         <version>${version.eclipse.microprofile.health}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.eclipse.microprofile.config</groupId>
         <artifactId>microprofile-config-api</artifactId>
         <version>${version.eclipse.microprofile.config}</version>
       </dependency>
-      
+
       <dependency>
-         <groupId>org.glassfish</groupId>
-         <artifactId>javax.json</artifactId>
-         <version>${version.javax-json}</version>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.json</artifactId>
+        <version>${version.javax-json}</version>
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.spec.javax.servlet</groupId>
-         <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-         <version>${version.jboss.servlet}</version>
+        <groupId>org.jboss.spec.javax.servlet</groupId>
+        <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+        <version>${version.jboss.servlet}</version>
       </dependency>
 
       <!-- Other dependencies -->
@@ -104,13 +105,13 @@
         <artifactId>cdi-api</artifactId>
         <version>${version.javax.enterprise.cdi-api}</version>
       </dependency>
-      
+
       <dependency>
-         <groupId>org.jboss.arquillian</groupId>
-         <artifactId>arquillian-bom</artifactId>
-         <version>${version.org.jboss.arquillian}</version>
-         <scope>import</scope>
-         <type>pom</type>
+        <groupId>org.jboss.arquillian</groupId>
+        <artifactId>arquillian-bom</artifactId>
+        <version>${version.org.jboss.arquillian}</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
 
       <dependency>
@@ -125,6 +126,12 @@
         <artifactId>weld-servlet-core</artifactId>
         <version>${version.weld}</version>
         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>io.smallrye</groupId>
+        <artifactId>smallrye-config</artifactId>
+        <version>${version.smallrye-config}</version>
       </dependency>
 
       <!-- Dependencies provided by the project -->
