--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -42,6 +42,7 @@
       </plugin>
     </plugins>
   </build>
+
   <dependencies>
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
@@ -69,27 +70,36 @@
       <artifactId>shrinkwrap-resolver-depchain</artifactId>
       <type>pom</type>
     </dependency>
+
     <dependency>
       <groupId>io.smallrye</groupId>
       <artifactId>smallrye-health</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>io.smallrye</groupId>
+      <artifactId>smallrye-config</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>javax.json</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.eclipse.microprofile.health</groupId>
       <artifactId>microprofile-health-tck</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
-         <groupId>org.jboss.arquillian.testng</groupId>
-         <artifactId>arquillian-testng-container</artifactId>
-         <version>${version.org.jboss.arquillian}</version>
-         <scope>test</scope>
+      <groupId>org.jboss.arquillian.testng</groupId>
+      <artifactId>arquillian-testng-container</artifactId>
+      <scope>test</scope>
     </dependency>
- 
+
   </dependencies>
+
   <profiles>
     <profile>
       <id>wildfly-servlet</id>
