--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -104,7 +104,10 @@
     <profile>
       <id>wildfly-servlet</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <property>
+          <!-- use property rather than activeByDefault, see https://issues.apache.org/jira/browse/MNG-4917 -->
+          <name>!noWildflyServlet</name>
+        </property>
       </activation>
       <dependencies>
         <dependency>
@@ -119,6 +122,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <systemProperties>
+                <jboss.options>${jboss.extra.opts}</jboss.options>
+              </systemProperties>
               <environmentVariables>
                 <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
               </environmentVariables>
@@ -151,6 +157,15 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk11plus</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+      </properties>
     </profile>
   </profiles>
 </project>
