--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
     <version.javax-json>1.1.4</version.javax-json>
     <version.smallrye-config>1.3.5</version.smallrye-config>
+    <version.jboss-logging>3.4.0.Final</version.jboss-logging>
   </properties>
 
   <scm>
@@ -99,11 +100,16 @@
         <version>${version.jboss.servlet}</version>
       </dependency>
 
-      <!-- Other dependencies -->
       <dependency>
         <groupId>javax.enterprise</groupId>
         <artifactId>cdi-api</artifactId>
         <version>${version.javax.enterprise.cdi-api}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jboss.logging</groupId>
+        <artifactId>jboss-logging</artifactId>
+        <version>${version.jboss-logging}</version>
       </dependency>
 
       <dependency>
