--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -63,9 +63,9 @@
     </dependency>
     <dependency>
     	<groupId>org.hamcrest</groupId>
-    	<artifactId>hamcrest-library</artifactId>
+    	<artifactId>hamcrest</artifactId>
     	<scope>test</scope>
-    	<version>1.3</version>
+    	<version>2.1</version>
     </dependency>
   </dependencies>
 
