--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -21,34 +21,37 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>smallrye-health-parent-2.0</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>smallrye-health-docs</artifactId>
+  <artifactId>smallrye-health-docs-2.0</artifactId>
   <name>SmallRye: MicroProfile Health - Documentation</name>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.asciidoctor</groupId>
-          <artifactId>asciidoctor-maven-plugin</artifactId>
-          <configuration>
-            <resources>
-              <resource>
-                <directory>src/main/asciidoc/images</directory>
-                <targetPath>images</targetPath>
-              </resource>
-              <resource>
-                <directory>src/main/asciidoc/downloads</directory>
-                <targetPath>downloads</targetPath>
-              </resource>
-            </resources>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
