--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -21,11 +21,11 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>smallrye-health-parent-2.0</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>smallrye-health</artifactId>
+  <artifactId>smallrye-health-2.0</artifactId>
 
   <name>SmallRye: MicroProfile Health Implementation</name>
 
@@ -51,8 +51,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.json</artifactId>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -66,6 +66,11 @@
     	<artifactId>hamcrest</artifactId>
     	<scope>test</scope>
     	<version>2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
