--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-parent</artifactId>
-    <version>4</version>
+    <version>5</version>
   </parent>
 
-  <artifactId>smallrye-health-parent</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <artifactId>smallrye-health-parent-2.0</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>SmallRye: MicroProfile Health Parent</name>
@@ -35,7 +35,6 @@
     <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>2.0</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
-    <version.javax-json>1.1.4</version.javax-json>
     <version.smallrye-config>1.3.7</version.smallrye-config>
   </properties>
 
@@ -43,7 +42,7 @@
     <connection>scm:git:git@github.com:smallrye/smallrye-health.git</connection>
     <developerConnection>scm:git:git@github.com:smallrye/smallrye-health.git</developerConnection>
     <url>https://github.com/smallrye/smallrye-health/</url>
-    <tag>1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <modules>
@@ -78,12 +77,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javax.json</artifactId>
-        <version>${version.javax-json}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_3.1_spec</artifactId>
         <version>${version.jboss.servlet}</version>
@@ -105,12 +98,12 @@
       <!-- Dependencies provided by the project -->
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-health</artifactId>
+        <artifactId>smallrye-health-2.0</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-health-tck</artifactId>
+        <artifactId>smallrye-health-tck-2.0</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
