--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -21,11 +21,11 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>smallrye-health-parent-2.0</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>smallrye-health-tck</artifactId>
+  <artifactId>smallrye-health-tck-2.0</artifactId>
 
   <name>SmallRye: MicroProfile Health TCK</name>
 
@@ -40,6 +40,28 @@
           </dependenciesToScan>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -47,6 +69,7 @@
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -73,17 +96,12 @@
 
     <dependency>
       <groupId>io.smallrye</groupId>
-      <artifactId>smallrye-health</artifactId>
+      <artifactId>smallrye-health-2.0</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.smallrye</groupId>
       <artifactId>smallrye-config</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.json</artifactId>
     </dependency>
 
     <dependency>
