--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
     <version.eclipse.microprofile.health>2.0</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
     <version.smallrye-config>1.3.7</version.smallrye-config>
+
+    <!-- Used by release plugin to define git tag -->
+    <tagNameFormat>smallrye-health-2.0</tagNameFormat>
   </properties>
 
   <scm>
