--- a/release/pom.xml
+++ b/release/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>release-2.0</artifactId>
+    <artifactId>smallrye-health-release-2.0</artifactId>
 
     <name>Empty Release Project to Avoid Maven Bug</name>
     <description>Empty Release Project to Avoid Maven Bug</description>
