--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>2.0.1</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
-    <version.smallrye-config>1.3.7</version.smallrye-config>
+    <version.smallrye-config>1.0.0</version.smallrye-config>
 
     <!-- Used by release plugin to define git tag -->
     <tagNameFormat>smallrye-health-2.0-@{project.version}</tagNameFormat>
@@ -94,7 +94,7 @@
 
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-config</artifactId>
+        <artifactId>smallrye-config-1.3</artifactId>
         <version>${version.smallrye-config}</version>
       </dependency>
 
