--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -94,7 +94,7 @@
 
     <dependency>
       <groupId>io.smallrye</groupId>
-      <artifactId>smallrye-config</artifactId>
+      <artifactId>smallrye-config-1.3</artifactId>
     </dependency>
 
     <dependency>
