--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -21,11 +21,11 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-parent-2.0</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <artifactId>smallrye-health-parent</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>smallrye-health-2.0</artifactId>
+  <artifactId>smallrye-health</artifactId>
 
   <name>SmallRye: MicroProfile Health Implementation</name>
 
