--- a/pom.xml
+++ b/pom.xml
@@ -22,24 +22,34 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-parent</artifactId>
-    <version>8</version>
+    <version>10</version>
   </parent>
 
-  <artifactId>smallrye-health-parent-2.0</artifactId>
-  <version>1.0.4-SNAPSHOT</version>
+  <artifactId>smallrye-health-parent</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>SmallRye: MicroProfile Health Parent</name>
+  <url>http://smallrye.io</url>
 
   <properties>
     <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>2.0.1</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
-    <version.smallrye-config>1.0.0</version.smallrye-config>
-
-    <!-- Used by release plugin to define git tag -->
-    <tagNameFormat>smallrye-health-2.0-@{project.version}</tagNameFormat>
+    <version.smallrye-config>1.3.9</version.smallrye-config>
   </properties>
+
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/smallrye/smallrye-health/issues</url>
+  </issueManagement>
 
   <scm>
     <connection>scm:git:git@github.com:smallrye/smallrye-health.git</connection>
@@ -94,19 +104,19 @@
 
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-config-1.3</artifactId>
+        <artifactId>smallrye-config</artifactId>
         <version>${version.smallrye-config}</version>
       </dependency>
 
       <!-- Dependencies provided by the project -->
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-health-2.0</artifactId>
+        <artifactId>smallrye-health</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-health-tck-2.0</artifactId>
+        <artifactId>smallrye-health-tck</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
