--- a/release/pom.xml
+++ b/release/pom.xml
@@ -4,11 +4,11 @@
 
     <parent>
         <groupId>io.smallrye</groupId>
-        <artifactId>smallrye-health-parent-2.0</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <artifactId>smallrye-health-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>smallrye-health-release-2.0</artifactId>
+    <artifactId>smallrye-health-release</artifactId>
 
     <name>Empty Release Project to Avoid Maven Bug</name>
     <description>Empty Release Project to Avoid Maven Bug</description>
