--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -21,11 +21,11 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-parent-2.0</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <artifactId>smallrye-health-parent</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>smallrye-health-tck-2.0</artifactId>
+  <artifactId>smallrye-health-tck</artifactId>
 
   <name>SmallRye: MicroProfile Health TCK</name>
 
@@ -89,12 +89,12 @@
 
     <dependency>
       <groupId>io.smallrye</groupId>
-      <artifactId>smallrye-health-2.0</artifactId>
+      <artifactId>smallrye-health</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.smallrye</groupId>
-      <artifactId>smallrye-config-1.3</artifactId>
+      <artifactId>smallrye-config</artifactId>
     </dependency>
 
     <dependency>
