--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
     <version.eclipse.microprofile.health>2.0.1</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
     <version.smallrye-config>1.3.9</version.smallrye-config>
+
+    <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
 
   <licenses>
