--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>2.1</version.eclipse.microprofile.health>
     <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
-    <version.smallrye-config>1.4.1</version.smallrye-config>
+    <version.smallrye-config>1.5.0</version.smallrye-config>
 
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
@@ -105,7 +105,7 @@
       </dependency>
 
       <dependency>
-        <groupId>io.smallrye</groupId>
+        <groupId>io.smallrye.config</groupId>
         <artifactId>smallrye-config</artifactId>
         <version>${version.smallrye-config}</version>
       </dependency>
