--- a/extension-test/pom.xml
+++ b/extension-test/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>smallrye-health-parent</artifactId>
     <groupId>io.smallrye</groupId>
-    <version>2.2.0</version>
+    <version>2.2.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
