--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - health30
     paths-ignore:
       - '.gitignore'
       - 'CODEOWNERS'
@@ -30,10 +31,22 @@ jobs:
       - uses: actions/checkout@v2
         name: checkout
 
+      - uses: actions/checkout@v2
+        name: checkout mp health 3.0
+        with:
+          repository: eclipse/microprofile-health
+          path: microprofile-health
+
       - uses: actions/setup-java@v1.3.0
         name: set up jdk ${{matrix.java}}
         with:
           java-version: ${{matrix.java}}
+          
+      - name: build microprofile health
+          run: |
+            cd microprofile-health
+            mvn install
+            cd ..
 
       - name: build with maven
         run: mvn -B formatter:validate verify --file pom.xml
