--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -42,7 +42,7 @@
 
     <dependency>
       <groupId>io.smallrye</groupId>
-      <artifactId>smallrye-health-extension-api</artifactId>
+      <artifactId>smallrye-health-api</artifactId>
       <version>${project.version}</version>
     </dependency>
 
