Add javadoc executions also for the pull request github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           cd ..
 
       - name: build with maven
-        run: mvn -B formatter:validate verify --file pom.xml
+        run: mvn -B javadoc:javadoc formatter:validate verify --file pom.xml
 
   quality:
     needs: [build]
