#142 Move provided checks into a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <module>implementation</module>
     <module>testsuite</module>
     <module>ui</module>
+    <module>provided-checks</module>
   </modules>
 
   <dependencyManagement>
