Update MicroProfile Health to 4.0
Align with MicroProfile 5, Jakarta 9.1

--- a/testsuite/experimental/pom.xml
+++ b/testsuite/experimental/pom.xml
@@ -20,6 +20,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jboss.weld.servlet</groupId>
+      <artifactId>weld-servlet-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.eclipse.microprofile.health</groupId>
       <artifactId>microprofile-health-tck</artifactId>
       <scope>test</scope>
@@ -29,11 +35,11 @@
 
   <profiles>
     <profile>
-      <id>wildfly-servlet</id>
+      <id>wildfly-preview</id>
       <activation>
         <property>
           <!-- use property rather than activeByDefault, see https://issues.apache.org/jira/browse/MNG-4917 -->
-          <name>!noWildflyServlet</name>
+          <name>!noWildflyPreview</name>
         </property>
       </activation>
       <dependencies>
@@ -53,7 +59,7 @@
                 <jboss.options>${jboss.extra.opts}</jboss.options>
               </systemProperties>
               <environmentVariables>
-                <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
+                <JBOSS_HOME>${project.build.directory}/wildfly-preview-${version.wildfly}</JBOSS_HOME>
               </environmentVariables>
             </configuration>
           </plugin>
@@ -71,7 +77,7 @@
                   <artifactItems>
                     <artifactItem>
                       <groupId>org.wildfly</groupId>
-                      <artifactId>wildfly-servlet-dist</artifactId>
+                      <artifactId>wildfly-preview-dist</artifactId>
                       <version>${version.wildfly}</version>
                       <type>zip</type>
                       <overWrite>false</overWrite>
