--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -72,9 +72,8 @@
     </dependency>
 
     <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <scope>test</scope>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
     </dependency>
     <dependency>
     	<groupId>org.hamcrest</groupId>
