--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,17 +29,12 @@ jobs:
     name: Build with JDK ${{matrix.java}}
 
     steps:
-      - uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            maven-
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
           distribution: temurin
+          cache: maven
       - name: Build with Maven
         run: mvn -B javadoc:javadoc formatter:validate verify
       - uses: actions/upload-artifact@v2
