--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-jakarta-parent</artifactId>
-    <version>37</version>
+    <artifactId>smallrye-parent</artifactId>
+    <version>39</version>
   </parent>
 
   <artifactId>smallrye-health-parent</artifactId>
@@ -35,12 +35,13 @@
   <properties>
     <version.eclipse.microprofile.config>3.0.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>4.0.1</version.eclipse.microprofile.health>
+    <version.eclipse.parsson>1.1.1</version.eclipse.parsson>
     <version.httpclient>4.5.14</version.httpclient>
     <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
     <version.mutiny>2.1.0</version.mutiny>
-    <version.smallrye-config>3.2.1</version.smallrye-config>
-    <version.smallrye-common>2.1.0</version.smallrye-common>
-    <version.smallrye.testing.utilities>2.3.0</version.smallrye.testing.utilities>
+    <version.smallrye.config>3.2.1</version.smallrye.config>
+    <version.smallrye.common>2.1.0</version.smallrye.common>
+    <version.smallrye.testing>2.3.0</version.smallrye.testing>
     <version.testng>7.5</version.testng>
     <version.wildfly>27.0.0.Alpha4</version.wildfly>
 
@@ -102,6 +103,7 @@
           </exclusion>
         </exclusions>
       </dependency>
+
       <dependency>
         <groupId>org.eclipse.microprofile.health</groupId>
         <artifactId>microprofile-health-tck</artifactId>
@@ -139,34 +141,38 @@
       </dependency>
 
       <dependency>
-        <groupId>org.jboss.weld.servlet</groupId>
-        <artifactId>weld-servlet-core</artifactId>
-        <version>${version.weld.core}</version>
-        <scope>test</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>jakarta.enterprise</groupId>
-            <artifactId>jakarta.enterprise.cdi-api</artifactId>
-          </exclusion>
-        </exclusions>
+        <groupId>io.smallrye.config</groupId>
+        <artifactId>smallrye-config</artifactId>
+        <version>${version.smallrye.config}</version>
       </dependency>
 
       <dependency>
-        <groupId>io.smallrye.config</groupId>
-        <artifactId>smallrye-config</artifactId>
-        <version>${version.smallrye-config}</version>
-      </dependency>
-      <dependency>
         <groupId>io.smallrye.common</groupId>
         <artifactId>smallrye-common-annotation</artifactId>
-        <version>${version.smallrye-common}</version>
+        <version>${version.smallrye.common}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.smallrye.common</groupId>
+        <artifactId>smallrye-common-bom</artifactId>
+        <version>${version.smallrye.common}</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
 
       <!-- Test Dependencies -->
       <dependency>
         <groupId>io.smallrye.testing</groupId>
+        <artifactId>smallrye-testing-bom</artifactId>
+        <version>${version.smallrye.testing}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+      <dependency>
+        <groupId>io.smallrye.testing</groupId>
         <artifactId>smallrye-testing-utilities</artifactId>
-        <version>${version.smallrye.testing.utilities}</version>
+        <version>${version.smallrye.testing}</version>
         <scope>test</scope>
       </dependency>
 
