Implement health filters feature

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,6 +27,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>mutiny</artifactId>
       <version>${version.mutiny}</version>
